--- a/index.html
+++ b/index.html
@@ -1,25 +1,220 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CheckpointDH2</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animacoes.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Coletânea Far Cry</title>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="stylesheet" href="./css/animacoes.css" />
 </head>
+
 <body>
-    <header>
+  <header>
+    <div class="FC_logo">
+      <img src="img/stars/star-1.svg" alt="stars">
+      <img src="./img/header/FC_logo.png" alt="FC_logo" />
+      <img src="img/stars/star-1.svg" alt="star">
+    </div>
 
-    </header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="">Itens</a></li>
+        <li><a href=".conteiner-integrants">Sobre nós</a></li>
+        <li><a href="./login.html">Login</a></li>
+      </ul>
+    </nav>
 
-    <main>
+    <div id="btn-toggle">
+      <div class="menu-toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
+    </div>
+  </header>
 
-    </main>
+  <main>
+    <section id="banner">
+      <div>
+        <h2>Coletânea FarCry</h2>
+        <p>
+          Confira a maior coletânea de games que a Ubisoft tem a oferecer.
+        </p>
 
-    <footer>
+        <button>
+          <span>Explorar</span>
+        </button>
+      </div>
 
-    </footer>
+    </section>
+
+    <section id="content">
+      <h3>itens</h3>
+
+      <div class="container-card">
+        <div class="card">
+          <img class="img-card" src="img/cards/FC_1.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry 1</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+
+        <div class="card">
+          <img class="img-card" src="img/cards/FC2.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry 2</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+
+        <div class="card">
+          <img class="img-card" src="img/cards/FC3.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry 3</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+
+        <div class="card">
+          <img class="img-card" src="img/cards/FC4.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry 4</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+
+        <div class="card">
+          <img class="img-card" src="img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry 5</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+
+        <div class="card">
+          <img class="img-card" src="img/cards/FC6.jpg" alt="Imagem promocional de Far Cry 6" />
+          <h4>Far Cry 6</h4>
+          <p>
+            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
+            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
+            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
+            para levá-la a este paraíso intocado. Pouco depois de atracar, no
+            entanto, o barco de Jack foi recebido por fogo de artilharia de um
+            misterioso grupo de milícias que fervilhava pela ilha.
+          </p>
+          <button>
+            <span>abrir</span>
+          </button>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="conteiner-integrants">
+      <div class="content-integrants">
+        <h3>Bruno Chaves</h3>
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+            HyperText Markup Language (HTML5)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/bchavs12/">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconGitHub" />
+          </a>
+          <a href="https://github.com/bchavs12" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconLinkedIN" />
+          </a>
+        </div>
+      </div>
+
+      <div class="content-integrants">
+        <h3>Daniel Oliveira</h3>
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+            Design Adaptativo
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/daniel-oliveira-24518b204/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/D4nOliver" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+
+      <div class="content-integrants">
+        <h3>Pablo Leandro</h3>
+        <p> 
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+            Cascading Style Sheets 3 (Css)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/pablo-leandro-de-oliveira-ab1190242/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/OPablinhoO" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+    </div>
+
+
+    <div>
+      <span>Checkpoint 2 desenvolvido em junho de 2022</span>
+    </div>
+
+  </footer>
 </body>
+
 </html>
