add footer e correcao de ancoragem

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+            <a href="./details.html"><span>abrir</span></a>
           </button>
         </div>
 
