--- a/login.html
+++ b/login.html
@@ -21,10 +21,10 @@
 
     <nav>
       <ul>
-        <li><a href="header">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="">Itens</a></li>
-        <li><a href="">Sobre Nós</a></li>
-        <li><a href="">Login</a></li>
+        <li><a href=".conteiner-integrants">Sobre Nós</a></li>
+        <li><a href="./login.html">Login</a></li>
       </ul>
     </nav>
 
@@ -59,42 +59,55 @@
     <div class="conteiner-integrants">
       <div class="content-integrants">
         <h3>Bruno Chaves</h3>
-        <p>responsável...</p>
-        <div>
-          <a href="https://github.com/bchavs12">
-            <img src="./img/IconLinkedIN.svg" alt="IconLinkedIN">
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+            HyperText Markup Language (HTML5)
           </a>
+        </p>
+        <div>
           <a href="https://www.linkedin.com/in/bchavs12/">
-            <img src="./img/IconGitHub.svg" alt="IconGitHub">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/bchavs12" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
           </a>
         </div>
       </div>
 
       <div class="content-integrants">
         <h3>Daniel Oliveira</h3>
-        <p>responsável...</p>
-        <div>
-          <a href="https://www.linkedin.com/in/daniel-oliveira-24518b204/">
-            <img src="./img/IconLinkedIN.svg" alt="">
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+            Design Adaptativo
           </a>
-          <a href="https://github.com/D4nOliver">
-            <img src="./img/IconGitHub.svg" alt="">
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/daniel-oliveira-24518b204/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/D4nOliver" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
           </a>
         </div>
       </div>
 
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
-        <p>responsável...</p>
-        <div>
-          <a href="/login.html">
-            <img src="./img/IconLinkedIN.svg" alt="">
+        <p> 
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+            Cascading Style Sheets 3 (Css)
           </a>
-          <a href="">
-            <img src="./img/IconGitHub.svg" alt="">
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/pablo-leandro-de-oliveira-ab1190242/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/OPablinhoO" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
           </a>
         </div>
       </div>
+
     </div>
 
     <div>
