--- a/details.html
+++ b/details.html
@@ -20,10 +20,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="header">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="">Itens</a></li>
-        <li><a href="">Sobre Nós</a></li>
-        <li><a href="">Login</a></li>
+        <li><a href=".conteiner-integrants">Sobre Nós</a></li>
+        <li><a href="./login.html">Login</a></li>
       </ul>
     </nav>
 
@@ -77,7 +77,67 @@
 
   </main>
 
-  <footer></footer>
+  <footer>
+    <div class="conteiner-integrants">
+      <div class="content-integrants">
+        <h3>Bruno Chaves</h3>
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+            HyperText Markup Language (HTML5)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/bchavs12/">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/bchavs12" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+
+      <div class="content-integrants">
+        <h3>Daniel Oliveira</h3>
+        <p>
+          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+            Design Adaptativo
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/daniel-oliveira-24518b204/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/D4nOliver" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+
+      <div class="content-integrants">
+        <h3>Pablo Leandro</h3>
+        <p> 
+          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+            Cascading Style Sheets 3 (Css)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/pablo-leandro-de-oliveira-ab1190242/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/OPablinhoO" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+    </div>
+
+
+    <div>
+      <span>Checkpoint 2 desenvolvido em junho de 2022</span>
+    </div>
+
+
+  </footer>
 </body>
 
 </html>
