add hover e correções

--- a/login.html
+++ b/login.html
@@ -22,8 +22,8 @@
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="">Itens</a></li>
-        <li><a href=".conteiner-integrants">Sobre Nós</a></li>
+        <li><a href="#content">Itens</a></li>
+        <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
     </nav>
