--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="">Itens</a></li>
-        <li><a href=".conteiner-integrants">Sobre nós</a></li>
+        <li><a href="#content">Itens</a></li>
+        <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
     </nav>
@@ -45,9 +45,11 @@
           Confira a maior coletânea de games que a Ubisoft tem a oferecer.
         </p>
 
-        <button>
-          <span>Explorar</span>
-        </button>
+        <a href="#content">
+          <button >
+            <span>Explorar</span>
+          </button>
+        </a>
       </div>
 
     </section>
@@ -155,7 +157,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer id="portifolio">
     <div class="conteiner-integrants">
       <div class="content-integrants">
         <h3>Bruno Chaves</h3>
