--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img src="img/stars/star-1.svg" alt="star">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="star">
     </div>
 
     <nav>
@@ -55,7 +55,7 @@
     </section>
 
     <section id="content">
-      <h3>itens</h3>
+      <h3>Itens</h3>
 
       <div class="container-card">
         <div class="card">
@@ -70,8 +70,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <a href="./details.html"><span>abrir</span></a>
+            <a href="./details.html"><span>Informações</span></a>
           </button>
+          <hr>
         </div>
 
         <div class="card">
@@ -86,8 +87,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+          <span>Informações</span>
           </button>
+          <hr>
         </div>
 
         <div class="card">
@@ -102,8 +104,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+          <span>Informações</span>
           </button>
+          <hr>
         </div>
 
         <div class="card">
@@ -118,8 +121,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+          <span>Informações</span>
           </button>
+          <hr>
         </div>
 
         <div class="card">
@@ -134,8 +138,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+          <span>Informações</span>
           </button>
+          <hr>
         </div>
 
         <div class="card">
@@ -150,8 +155,9 @@
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
           <button>
-            <span>abrir</span>
+            <span>Informações</span>
           </button>
+          <hr>
         </div>
       </div>
     </section>
@@ -162,7 +168,7 @@
       <div class="content-integrants">
         <h3>Bruno Chaves</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
             HyperText Markup Language (HTML5)
           </a>
         </p>
@@ -179,7 +185,7 @@
       <div class="content-integrants">
         <h3>Daniel Oliveira</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
             Design Adaptativo
           </a>
         </p>
@@ -196,7 +202,7 @@
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
         <p> 
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
             Cascading Style Sheets 3 (Css)
           </a>
         </p>
