--- a/login.html
+++ b/login.html
@@ -14,9 +14,9 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
     </div>
 
     <nav>
@@ -37,7 +37,7 @@
     </div>
   </header>
 
-  <img src="./img/FC_logo.png" alt="FC_logo" />
+  <img class="logo__login" src="./img/header/FC_logo.png" alt="FC_logo" />
   <form action="login" method="POST">
     <p>
       <label for="email">email</label>
@@ -54,22 +54,21 @@
 
 
 
-  <footer>
-
+  <footer id="portifolio">
     <div class="conteiner-integrants">
       <div class="content-integrants">
         <h3>Bruno Chaves</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
             HyperText Markup Language (HTML5)
           </a>
         </p>
         <div>
           <a href="https://www.linkedin.com/in/bchavs12/">
-            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconGitHub" />
           </a>
           <a href="https://github.com/bchavs12" target="_blank">
-            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+            <img src="./img/footer/IconGitHub.svg" alt="IconLinkedIN" />
           </a>
         </div>
       </div>
@@ -77,7 +76,7 @@
       <div class="content-integrants">
         <h3>Daniel Oliveira</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
             Design Adaptativo
           </a>
         </p>
@@ -94,7 +93,7 @@
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
         <p> 
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
             Cascading Style Sheets 3 (Css)
           </a>
         </p>
@@ -107,8 +106,8 @@
           </a>
         </div>
       </div>
-
     </div>
+
 
     <div>
       <span>Checkpoint 2 desenvolvido em junho de 2022</span>
