--- a/details.html
+++ b/details.html
@@ -14,9 +14,9 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
     </div>
     <nav>
       <ul>
@@ -44,54 +44,64 @@
   <main>
     <h1>Far Cry 5 </h1>
 
-    <div class="stars"> 
-      <img src="img/stars/star-1.svg" alt="">
-      <img src="img/stars/star-1.svg" alt="">
-      <img src="img/stars/star-1.svg" alt="">
-      <img src="img/stars/star-1.svg" alt="">
-      <img src="img/stars/star-1.svg" alt="">
+    <div class="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
     </div>
-
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima saepe veritatis vel totam dolorem minus odio nihil dolores, quod quas nam ea quibusdam, eligendi accusantium laudantium enim! Doloribus, ea quod.
+      Far Cry 5 é um jogo eletrônico de tiro em primeira pessoa de ação-aventura ambientado em um mundo aberto. Foi
+      desenvolvido pela Ubisoft Montreal e publicado pela Ubisoft para Microsoft Windows, PlayStation 4 e Xbox One em 27
+      de março de 2018 e foi lançado no 3 de Novembro para o Google Stadia, junto com o Far Cry: New Dawn. É o décimo
+      titulo da serie Far Cry e o quinto jogo principal.
     </p>
 
+    <p>
+      Em <span class="destaq">Far Cry 5</span> o jogador assume o papel de um delegado de xerife que foi enviado ao
+      condado fictício de Hope County,
+      em Montana, para prender Joseph Seed (chamado de "O Pai" por seus seguidores, os "Edenetes"). Seed é um pregador
+      radical que acredita que foi escolhido por Deus para proteger o povo de Hope County de um "colapso inevitável".
+      Ele é o criador e líder da seita cristã "Projeto do Portão do Éden", um culto apocalíptico religioso e militar.
+    </p>
+    <p>
+      Far Cry 5 foi bem recebido pela crítica após o seu lançamento, apesar de ter sido objeto de controvérsia depois de ter sido anunciado ao lado de um período de intensos conflitos políticos. Os críticos elogiaram o design do mundo aberto, o seu visual e trilha sonora, mas dirigiram críticas para sua história e alguns dos personagens. O jogo teve um bom desempenho comercial e se tornou o título mais vendido da franquia, arrecadando mais de 310 milhões de dólares em sua primeira semana de vendas. Vários pacotes de conteúdo para download (DLC) foram lançados. Um título de spin-off e continuação da narrativa, Far Cry: New Dawn, foi lançado em fevereiro de 2019.
+    </p>
     <div>
       <h4> Estúdio </h4>
       <p> <a href="https://pt.wikipedia.org/wiki/Ubisoft" target="_blank">Ubisoft</a></p>
     </div>
-
     <div>
       <h4> Lançamento </h4>
       <p> 26 de março de 2018 </p>
     </div>
-
     <section>
       <h1>Trailer</h1>
-
       <div id="iframefc5">
-        <iframe src="https://www.youtube.com/embed/1KOwG3CKR0w?start=3 end=53" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/1KOwG3CKR0w?start=3 end=53" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
-
     </section>
-
   </main>
 
-  <footer>
+  <footer id="portifolio">
     <div class="conteiner-integrants">
       <div class="content-integrants">
         <h3>Bruno Chaves</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
             HyperText Markup Language (HTML5)
           </a>
         </p>
         <div>
           <a href="https://www.linkedin.com/in/bchavs12/">
-            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconGitHub" />
           </a>
           <a href="https://github.com/bchavs12" target="_blank">
-            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+            <img src="./img/footer/IconGitHub.svg" alt="IconLinkedIN" />
           </a>
         </div>
       </div>
@@ -99,7 +109,7 @@
       <div class="content-integrants">
         <h3>Daniel Oliveira</h3>
         <p>
-          <a href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
             Design Adaptativo
           </a>
         </p>
@@ -116,7 +126,7 @@
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
         <p> 
-          <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
             Cascading Style Sheets 3 (Css)
           </a>
         </p>
@@ -135,7 +145,6 @@
     <div>
       <span>Checkpoint 2 desenvolvido em junho de 2022</span>
     </div>
-
 
   </footer>
 </body>
