--- a/details.html
+++ b/details.html
@@ -21,7 +21,7 @@
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#content">Itens</a></li>
+        <li><a href="#content">Franquia</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -42,9 +42,9 @@
   </section>
 
   <main>
-    <h1>Far Cry 5 </h1>
+    <h1 id="tittle">Far Cry 5 </h1>
 
-    <div class="stars">
+    <div id="stars">
       <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
