--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#content">Itens</a></li>
+        <li><a href="#banner">Home</a></li>
+        <li><a href="#content">Franquia</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -46,7 +46,7 @@
         </p>
 
         <a href="#content">
-          <button >
+          <button>
             <span>Explorar</span>
           </button>
         </a>
@@ -55,7 +55,7 @@
     </section>
 
     <section id="content">
-      <h3>Itens</h3>
+      <h3>Coletânea FarCry</h3>
 
       <div class="container-card">
         <div class="card">
@@ -69,14 +69,16 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-            <a href="./details.html"><span>Informações</span></a>
-          </button>
+          <a href="">
+            <button disabled>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC2.jpg" alt="Imagem promocional de Far Cry 1" />
+          <img class="img-card" src="img/cards/FC2.jpg" alt="Imagem promocional de Far Cry 2" />
           <h4>Far Cry 2</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
@@ -86,14 +88,16 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-          <span>Informações</span>
-          </button>
+          <a href="">
+            <button disabled>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC3.jpg" alt="Imagem promocional de Far Cry 1" />
+          <img class="img-card" src="img/cards/FC3.jpg" alt="Imagem promocional de Far Cry 3" />
           <h4>Far Cry 3</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
@@ -103,14 +107,16 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-          <span>Informações</span>
-          </button>
+          <a href="">
+            <button disabled>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC4.jpg" alt="Imagem promocional de Far Cry 1" />
+          <img class="img-card" src="img/cards/FC4.jpg" alt="Imagem promocional de Far Cry 4" />
           <h4>Far Cry 4</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
@@ -120,14 +126,16 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-          <span>Informações</span>
-          </button>
+          <a href="">
+            <button disabled>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 1" />
+          <img class="img-card" src="img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 5" />
           <h4>Far Cry 5</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
@@ -137,9 +145,11 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-          <span>Informações</span>
-          </button>
+          <a href="./details.html">
+            <button>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
 
@@ -154,9 +164,11 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <button>
-            <span>Informações</span>
-          </button>
+          <a href="">
+            <button disabled>
+              <span>Informações</span>
+            </button>
+          </a>
           <hr>
         </div>
       </div>
@@ -203,7 +215,7 @@
         <h3>Pablo Leandro</h3>
         <p> 
           <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
-            Cascading Style Sheets 3 (Css)
+            Cascading Style Sheets 3 (css)
           </a>
         </p>
         <div>
