--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css" />
   <link rel="stylesheet" href="./css/animacoes.css" />
 </head>
@@ -16,13 +16,13 @@
     <div class="FC_logo">
       <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="img/stars/star-1.svg" alt="star">
     </div>
 
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#content">Itens</a></li>
+        <li><a href="#content">Franquia</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -37,22 +37,20 @@
     </div>
   </header>
 
-  <img class="logo__login" src="./img/header/FC_logo.png" alt="FC_logo" />
-  <form action="login" method="POST">
-    <p>
-      <label for="email">email</label>
-      <input type="email" name="email" />
-    </p>
-    <p>
-      <label for="password">Senha</label>
-      <input type="password" name="password" />
-    </p>
-    <p>
-      <button type="submit"> Entrar </button>
-    </p>
-  </form>
+  <main>
+    <div class="login">
+      <form>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email">
 
+        <label for="password">Senha:</label>
+        <input type="password" name="password" id="password">
 
+        <button type="submit" id="btn"> Entrar </button>
+      </form>
+    </div>
+
+  </main>
 
   <footer id="portifolio">
     <div class="conteiner-integrants">
@@ -92,9 +90,9 @@
 
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
-        <p> 
+        <p>
           <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
-            Cascading Style Sheets 3 (Css)
+            Cascading Style Sheets 3 (css)
           </a>
         </p>
         <div>
@@ -112,9 +110,5 @@
     <div>
       <span>Checkpoint 2 desenvolvido em junho de 2022</span>
     </div>
-
   </footer>
-
 </body>
-
-</html>
