estrutura pag details finalizada

--- a/index.html
+++ b/index.html
@@ -138,14 +138,9 @@
           <img class="img-card" src="img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 5" />
           <h4>Far Cry 5</h4>
           <p>
-            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
-            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
-            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
-            para levá-la a este paraíso intocado. Pouco depois de atracar, no
-            entanto, o barco de Jack foi recebido por fogo de artilharia de um
-            misterioso grupo de milícias que fervilhava pela ilha.
+            O jogo é ambientado na fictícia Hope Country, Montana, Estados Unidos, onde um pregador cristão chamado Joseph Seed alcançou proeminência. Seed acredita que ele foi escolhido para proteger o povo de Hope County de um "colapso inevitável" e estabeleceu uma congregação chamada Projeto do Portão do Éden.
           </p>
-          <a href="./details.html">
+          <a href="./detailsFC5.html">
             <button>
               <span>Informações</span>
             </button>
