--- a/login.html
+++ b/login.html
@@ -39,14 +39,21 @@
 
   <main>
     <div class="login">
+
+      
+
       <form>
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email">
+        <legend>Login</legend>
+  
+        <div>
+          <input type="email" name="email" id="email" placeholder="Email" required>
+        </div>
 
-        <label for="password">Senha:</label>
-        <input type="password" name="password" id="password">
+        <div>
+          <input type="password" name="password" id="password" placeholder="Senha" required>
+        </div>
 
-        <button type="submit" id="btn"> Entrar </button>
+        <button type="submit" id="btn">Entrar</button>
       </form>
     </div>
 
