Atualização do projeto 26/06/22 20:12

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="./img/stars/star.svg" alt="stars" />
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="star">
+      <img class="stars_logo" src="img/stars/star.svg" alt="star" />
     </div>
 
     <nav>
       <ul>
         <li><a href="#banner">Home</a></li>
-        <li><a href="#content">Franquia</a></li>
+        <li><a href="#content">Coletânea</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -51,7 +51,6 @@
           </button>
         </a>
       </div>
-
     </section>
 
     <section id="content">
@@ -59,8 +58,8 @@
 
       <div class="container-card">
         <div class="card">
-          <img class="img-card" src="img/cards/FC_1.jpg" alt="Imagem promocional de Far Cry 1" />
-          <h4>Far Cry 1</h4>
+          <img class="img-card" src="./img/cards/FC_1.jpg" alt="Imagem promocional de Far Cry 1" />
+          <h4>Far Cry: Classic</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
             chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
@@ -69,102 +68,109 @@
             entanto, o barco de Jack foi recebido por fogo de artilharia de um
             misterioso grupo de milícias que fervilhava pela ilha.
           </p>
-          <a href="">
-            <button disabled>
+          <a href="./detailsFC1.html">
+            <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC2.jpg" alt="Imagem promocional de Far Cry 2" />
+          <img class="img-card" src="./img/cards/FC2.jpg" alt="Imagem promocional de Far Cry 2" />
           <h4>Far Cry 2</h4>
           <p>
-            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
-            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
-            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
-            para levá-la a este paraíso intocado. Pouco depois de atracar, no
-            entanto, o barco de Jack foi recebido por fogo de artilharia de um
-            misterioso grupo de milícias que fervilhava pela ilha.
+            Far Cry 2 Se passa durante o final de 2008 em um pequeno estado
+            falido fictício chamado bowa-seko, na África Central, envolvido em
+            uma guerra civil. O governo recentemente caiu, deixando duas
+            facções competindo pelo controle. Estão em guerra a United Front
+            for Liberation and Labour (UFLL, liderada por Addi Mbantuwe, um
+            antigo líder de oposição) e a Alliance for Popular Resistance
+            (APR, liderada por Oliver Tambossa, Chefe do Estado Maior do
+            antigo governo).
           </p>
-          <a href="">
-            <button disabled>
+          <a href="./detailsFC2.html">
+            <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC3.jpg" alt="Imagem promocional de Far Cry 3" />
+          <img class="img-card" src="./img/cards/FC3.jpg" alt="Imagem promocional de Far Cry 3" />
           <h4>Far Cry 3</h4>
           <p>
-            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
-            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
-            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
-            para levá-la a este paraíso intocado. Pouco depois de atracar, no
-            entanto, o barco de Jack foi recebido por fogo de artilharia de um
-            misterioso grupo de milícias que fervilhava pela ilha.
+            Para além dos limites da civilização encontra-se uma ilha, um
+            lugar sem lei governado por pirataria e miséria humana, onde os
+            escapes são apenas as drogas ou o cano de uma arma. Este é o lugar
+            onde você se encontra, preso num lugar que esqueceu o certo do
+            errado, um lugar que vive pelos princípios da violência.
           </p>
-          <a href="">
-            <button disabled>
+          <a href="./detailsFC3.html">
+            <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC4.jpg" alt="Imagem promocional de Far Cry 4" />
+          <img class="img-card" src="./img/cards/FC4.jpg" alt="Imagem promocional de Far Cry 4" />
           <h4>Far Cry 4</h4>
           <p>
-            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
-            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
-            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
-            para levá-la a este paraíso intocado. Pouco depois de atracar, no
-            entanto, o barco de Jack foi recebido por fogo de artilharia de um
-            misterioso grupo de milícias que fervilhava pela ilha.
+            Ajay Ghale que regressa a Kyrat (uma nação fictícia fortemente
+            inspirada em locais da região Himalaia do Nepal), uma zona
+            indomável e selvagem no seu pais de origem, para espalhar as
+            cinzas da sua falecida mãe. Uma vez lá, vê-se envolvido numa
+            guerra civil entre os rebeldes (conhecidos como Caminho Dourado) e
+            o regime despótico do auto-intitulado rei, o sádico Pagan Min
+            (Troy Baker). O jogador tem a possibilidade de escolher
+            de que lado quer juntar forças, resultando em diferentes finais.
           </p>
-          <a href="">
-            <button disabled>
+          <a href="./detailsFC4.html">
+            <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 5" />
+          <img class="img-card" src="./img/cards/FC5.jpg" alt="Imagem promocional de Far Cry 5" />
           <h4>Far Cry 5</h4>
           <p>
-            O jogo é ambientado na fictícia Hope Country, Montana, Estados Unidos, onde um pregador cristão chamado Joseph Seed alcançou proeminência. Seed acredita que ele foi escolhido para proteger o povo de Hope County de um "colapso inevitável" e estabeleceu uma congregação chamada Projeto do Portão do Éden.
+            O jogo é ambientado na fictícia Hope Country, Montana, Estados
+            Unidos, onde um pregador cristão chamado Joseph Seed alcançou
+            proeminência. Seed acredita que ele foi escolhido para proteger o
+            povo de Hope County de um "colapso inevitável" e estabeleceu uma
+            congregação chamada Projeto do Portão do Éden.
+            Ostensivamente, isto é para cumprir sua missão de levar o povo à salvação;[10] na realidade, Seed é um
+            pregador radical e o Portão do Éden é um culto apocalíptico militarista.
           </p>
           <a href="./detailsFC5.html">
             <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
 
         <div class="card">
-          <img class="img-card" src="img/cards/FC6.jpg" alt="Imagem promocional de Far Cry 6" />
+          <img class="img-card" src="./img/cards/FC6.jpg" alt="Imagem promocional de Far Cry 6" />
           <h4>Far Cry 6</h4>
           <p>
-            O marinheiro freelance Jack Carver está amaldiçoando o dia em que
-            chegou a esta ilha. Uma semana atrás, uma repórter impetuosa
-            chamada Valerie ofereceu a ele uma quantia incrível de dinheiro
-            para levá-la a este paraíso intocado. Pouco depois de atracar, no
-            entanto, o barco de Jack foi recebido por fogo de artilharia de um
-            misterioso grupo de milícias que fervilhava pela ilha.
+            O jogo se passa em uma ilha fictícia do Caribe chamada "Yara", inspirada em Cuba, governada por uma ditadura
+            do "El Presidente" Anton Castillo (dublado e modelado por Giancarlo Esposito), que está criando seu filho
+            Diego (dublado por Anthony Gonzalez), para seguir seu governo. O jogador assume o papel de um guerrilheiro
+            tentando recuperar a ilha para seu povo.
           </p>
-          <a href="">
-            <button disabled>
+          <a href="./detailsFC6.html">
+            <button>
               <span>Informações</span>
             </button>
           </a>
-          <hr>
+          <hr />
         </div>
       </div>
     </section>
@@ -208,7 +214,7 @@
 
       <div class="content-integrants">
         <h3>Pablo Leandro</h3>
-        <p> 
+        <p>
           <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
             Cascading Style Sheets 3 (css)
           </a>
@@ -224,11 +230,9 @@
       </div>
     </div>
 
-
     <div>
       <span>Checkpoint 2 desenvolvido em junho de 2022</span>
     </div>
-
   </footer>
 </body>
 
