--- a/login.html
+++ b/login.html
@@ -14,15 +14,15 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="star">
+      <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
     </div>
 
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#content">Franquia</a></li>
+        <li><a href="./index.html">Coletânea</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -39,11 +39,12 @@
 
   <main>
     <div class="login">
-
-      
-
       <form>
-        <legend>Login</legend>
+        <div id="logo__container">
+          <img class="stars_logo" id="star1" src="img/stars/star.svg" alt="stars">
+          <img class="logo__form" src="img/header/FC_logo.png" alt="FC_logo">
+          <img class="stars_logo" id="star2" src="img/stars/star.svg" alt="stars">
+        </div>
   
         <div>
           <input type="email" name="email" id="email" placeholder="Email" required>
