--- a/detailsFC5.html
+++ b/detailsFC5.html
@@ -14,14 +14,14 @@
 <body>
   <header>
     <div class="FC_logo">
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
       <img src="./img/header/FC_logo.png" alt="FC_logo" />
-      <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+      <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
     </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#content">Franquia</a></li>
+        <li><a href="#content">Coletânea</a></li>
         <li><a href="#portifolio">Sobre nós</a></li>
         <li><a href="./login.html">Login</a></li>
       </ul>
@@ -37,20 +37,20 @@
   </header>
   <section id="bannerdetails">
     <div>
-      <img src="img/cards/banner_FC5.jpg" alt="bannerFC5">
+      <img src="./img/cards/banner_FC5.jpg" alt="bannerFC5">
     </div>
   </section>
 
   <main>
     <div id="container">
-      <h1 id="tittle">Far Cry 5 </h1>
+      <h1 class="tittle_details">Far Cry <span class="span__tittle">5</span></h1>
 
       <div id="stars">
-        <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
-        <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
-        <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
-        <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
-        <img class="stars_logo" src="img/stars/star-1.svg" alt="stars">
+        <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
+        <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
+        <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
+        <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
+        <img class="stars_logo" src="./img/stars/star.svg" alt="stars">
       </div>
       <section id="content__description">
         <p class="p__details">
@@ -117,7 +117,7 @@
         <div class="trailer__tittle">
           <h1>Trailer</h1>
         </div>
-        <div id="iframefc5">
+        <div class="iframefc">
           <iframe src="https://www.youtube.com/embed/1KOwG3CKR0w?start=3 end=53" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
